--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -201,15 +201,17 @@
 
                 <!-- 3. Book Room -->
                 <section id="view-book-room" class="view-section">
-                    <h2>New Booking</h2>
+                    <h2 id="book-room-title">New Booking</h2>
                     <br>
                     <div class="card" style="max-width: 800px;">
                         <form id="bookRoomForm">
                             <div class="form-group">
-                                <label>Review Selection</label>
-                                <input type="text" class="form-control"
-                                    placeholder="Calculated after availability check" readonly disabled
-                                    style="background: #f9f9f9;">
+                                <label>Assign Room</label>
+                                <select id="booking-room-id" class="form-control" required>
+                                    <option value="">Select an available room...</option>
+                                </select>
+                                <p id="booking-room-type-info" style="font-size: 0.8rem; color: #777; margin-top: 4px;">
+                                </p>
                             </div>
 
                             <hr style="margin: 1.5rem 0; border: 0; border-top: 1px solid #eee;">
@@ -217,29 +219,39 @@
                             <div class="stats-grid" style="margin-bottom: 0;">
                                 <div class="form-group">
                                     <label>Client Name</label>
-                                    <input type="text" class="form-control" required placeholder="Full Name">
+                                    <input type="text" id="booking-client-name" class="form-control" required
+                                        placeholder="Full Name">
                                 </div>
                                 <div class="form-group">
                                     <label>Phone Number</label>
-                                    <input type="tel" class="form-control" required placeholder="+1 234 567 8900">
+                                    <input type="tel" id="booking-phone" class="form-control" required
+                                        placeholder="+1 234 567 8900">
                                 </div>
                             </div>
 
                             <div class="stats-grid" style="margin-bottom: 0;">
                                 <div class="form-group">
                                     <label>Check-in Date</label>
-                                    <input type="date" class="form-control" required>
+                                    <input type="date" id="booking-check-in" class="form-control" required>
                                 </div>
                                 <div class="form-group">
                                     <label>Nights</label>
-                                    <input type="number" class="form-control" min="1" placeholder="e.g. 1">
+                                    <input type="number" id="booking-nights" class="form-control" min="1"
+                                        placeholder="e.g. 1">
                                 </div>
                             </div>
 
                             <div class="form-group">
-                                <label>Total Price (Est.)</label>
-                                <input type="text" class="form-control" value="$0.00" readonly
+                                <div style="display: flex; justify-content: space-between; align-items: baseline;">
+                                    <label>Total Price (Est.)</label>
+                                    <span id="booking-base-price-display"
+                                        style="font-size: 0.85rem; color: #888; display: none;">Base: $0.00</span>
+                                </div>
+                                <input type="number" id="booking-total-price" class="form-control" step="0.01"
+                                    value="0.00"
                                     style="font-weight: bold; font-size: 1.1rem; color: var(--primary-color);">
+                                <p style="font-size: 0.75rem; color: #999; margin-top: 4px;">* Field is editable for
+                                    manual discounts.</p>
                             </div>
 
                             <button type="submit" class="btn btn-primary">Confirm Booking</button>
@@ -438,6 +450,56 @@
                             <div id="bookingsEmptyState" class="empty-state" style="display: none;">
                                 <i class="fas fa-list-alt"></i>
                                 <p>No bookings found</p>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
+                <!-- 7. Payment Page -->
+                <section id="view-payment" class="view-section">
+                    <div class="view-header">
+                        <h2>Payment Processing</h2>
+                        <button class="btn btn-outline"
+                            onclick="document.querySelector('.menu-item[data-target=\'view-bookings\']').click()">
+                            <i class="fas fa-arrow-left"></i> Back to Bookings
+                        </button>
+                    </div>
+                    <br>
+
+                    <div class="stats-grid" style="grid-template-columns: 1fr 1fr; gap: 2rem;">
+                        <!-- Booking Summary -->
+                        <div class="card">
+                            <h3>Booking Summary</h3>
+                            <hr style="margin: 1rem 0; border: 0; border-top: 1px solid #eee;">
+                            <div id="payment-summary-content">
+                                <p>Loading booking details...</p>
+                            </div>
+                        </div>
+
+                        <!-- Payment Actions -->
+                        <div class="card">
+                            <h3>Actions</h3>
+                            <hr style="margin: 1rem 0; border: 0; border-top: 1px solid #eee;">
+
+                            <div class="form-group">
+                                <label>Payment Status</label>
+                                <div id="payment-current-status" class="status-badge"
+                                    style="display: inline-block; margin-top: 5px;">UNKNOWN</div>
+                            </div>
+
+                            <div style="display: flex; flex-direction: column; gap: 1rem; margin-top: 2rem;">
+                                <button id="btn-process-payment" class="btn btn-primary">
+                                    <i class="fas fa-check-circle"></i> Complete Payment
+                                </button>
+
+                                <button id="btn-hold-payment" class="btn btn-outline"
+                                    style="color: #f39c12; border-color: #f39c12;">
+                                    <i class="fas fa-hand-paper"></i> Hold / Defer Payment
+                                </button>
+
+                                <p style="font-size: 0.85rem; color: #777; font-style: italic;">
+                                    * Completing payment will confirm the booking and mark it as PAID.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -654,11 +716,11 @@
         
         For WSL + Windows: Use WSL IP address (run: ip addr show eth0)
         For Production: Use your production API domain
-        For Local: Use http://172.23.89.211:5005/api/v1
+        For Local: Use http://localhost:5005/api/v1
     -->
     <script>
         window.__APP_CONFIG__ = {
-            API_BASE_URL: "http://172.23.89.211:5005/api/v1",
+            API_BASE_URL: "http://localhost:5005/api/v1",
             ENVIRONMENT: "development",
             DEBUG: true
         };
