--- a/admin-dashboard/index.html
+++ b/admin-dashboard/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css?v=2.0">
 </head>
 
 <body>
@@ -727,6 +727,7 @@
     </script>
 
     <!-- UI Scripts -->
+    <script src="js/auth.js"></script>
     <script src="js/ui.js"></script>
 </body>
 
